1.初始化 1.1更新flask等包 1.2加入flask_migrate

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -55,6 +55,8 @@
                                     {% endfor %}
                                 </ul>
                             </li>
+                            {% else %}
+                            <li>{{ menu.name }}</li>
                         {% endif %}
                     {% endfor %}
                     {% for article_type in ArticleType.query.all() %}
