--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,17 +25,17 @@
             <script src="{{ url_for('static', filename='js/jquery-2.2.1.min.js') }}"></script>
             {#            <script type="text/javascript" src="https://v1.hitokoto.cn/?encode=js"></script>#}
             <script type="text/javascript">
-                console.log("--------------------")
                 $.ajax({
                     url: 'https://v1.hitokoto.cn/?encode=json&c=i&c=h&c=d',
                     success: (res) => {
-                        console.log(res)
-                        let from = '', author = '', suffix = ''
-                        if (res['from_who']) {
-                            author = res['from_who']
+                        let from, author, suffix
+                        author = res['from_who']
+                        if (!author || author === 'null') {
+                            author = ''
                         }
-                        if (res['from']) {
-                            from = `「${res['from']}」`
+                        from = `「${res['from']}」`
+                        if (!from || from === 'null') {
+                            from = ''
                         }
                         suffix = author + from
                         if (from || author) {
@@ -45,7 +45,6 @@
                         $(".hitokoto").text(content)
                     }
                 })
-                console.log("--------------------")
             </script>
         </div>
     </div>
@@ -62,6 +61,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class=""><a href="/"><span class="glyphicon glyphicon-home"> 首页</span></a></li>
+                    <li class=""><a href="/"><span class="glyphicon"> 插件</span></a></li>
                     {% for menu in Menu.query.order_by(Menu.order.asc()).all() %}
                         {% if menu.types.count() %}
                             <li class="dropdown">
@@ -163,7 +163,7 @@
         </div>
     </div>
 {% endblock %}
-<div class="footer">
+{#<div class="footer">
     <p class="footer-content">
         @2016
         <a href="#">Blog_mini</a>
@@ -174,7 +174,7 @@
         </a>
         {% endif %}
     </p>
-</div>
+</div>#}
 <div class="btn-group-vertical floatButton">
     <button id="goTop" class="btn btn-default" title="去顶部" type="button">
         <span class="glyphicon glyphicon-arrow-up"></span>
