--- a/app/templates/article_detials.html
+++ b/app/templates/article_detials.html
@@ -15,7 +15,7 @@
         </p>
     </div>
     <div class="article-add-info">
-        <p>
+        <p style="color: #d8c224;">
             <span class="glyphicon glyphicon-time">
                 博文最后更新时间：
             </span>
