--- a/app/templates/_submit_comment.html
+++ b/app/templates/_submit_comment.html
@@ -6,12 +6,12 @@
 {#            <button type="button" class="close" data-dismiss="alert" id="undo_reply">&times;</button>#}
 {#            回复<strong><i>香飘叶子</i></strong> </div>#}
         <form class="submit-comment-form" id="submit-comment-form" method="post" action="">
-            {{ form.content.label(class='comment-form-item-label') }}{{ form.content(class='form-control comment-content', required='') }}
+            {{ form.content.label(class='comment-form-item-label') }}{{ form.content(class='form-control comment-content-textarea', required='') }}
             {{ form.csrf_token }}
             {{ form.follow(type='hidden') }}
             {{ form.name.label(class='comment-form-item-label') }}{{ form.name(class='form-control', required='', value=current_user.username) }}
             {{ form.email.label(class='comment-form-item-label') }}{{ form.email(class='form-control', required='', value=current_user.email) }}
-            <button type="submit" class="btn btn-default">
+            <button type="submit" class="btn btn-default" style="margin-top: 10px;">
                 提交
             </button>
         </form>
