添加文章拉取 调整html转义

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,9 +23,29 @@
                 {{ BlogInfo.query.first().signature }}
             </p>
             <script src="{{ url_for('static', filename='js/jquery-2.2.1.min.js') }}"></script>
-            {% block hitokoto %}
-
-            {% endblock %}
+            {#            <script type="text/javascript" src="https://v1.hitokoto.cn/?encode=js"></script>#}
+            <script type="text/javascript">
+                $.ajax({
+                    url: 'https://v1.hitokoto.cn/?encode=json&c=i&c=h&c=d',
+                    success: (res) => {
+                        let from, author, suffix
+                        author = res['from_who']
+                        if (!author || author === 'null') {
+                            author = ''
+                        }
+                        from = `「${res['from']}」`
+                        if (!from || from === 'null') {
+                            from = ''
+                        }
+                        suffix = author + from
+                        if (from || author) {
+                            suffix = "—— " + suffix
+                        }
+                        let content = `『 ${res['hitokoto']}  』${suffix}`
+                        $(".hitokoto").text(content)
+                    }
+                })
+            </script>
         </div>
     </div>
     <nav class="navbar navbar-{{ BlogInfo.query.first().navbar }}" role="navigation">
