--- a/app/templates/article_detials.html
+++ b/app/templates/article_detials.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-<div id='article-detials' class="entry-box">
+<div id='article-details' class="entry-box" >
     {% include '_article_info.html' %}
     <hr>
     <div>
