--- a/app/static/css/common.css
+++ b/app/static/css/common.css
@@ -19,6 +19,10 @@ body {
     min-height: 800px;
 }
 
+#article-details img {
+    max-width: 710px !important;
+}
+
 .article-entry-sum {
     margin-top: 5px;
 }
@@ -385,6 +389,7 @@ ul.comments .disabled-comment-admin-btn {
     width: 50%;
 }
 
+
 h1 {
     font-size: 25px;
 }
@@ -399,42 +404,4 @@ h3 {
 
 h4 {
     font-size: 16px;
-}
-
-.plugin-list-item-cover-img {
-    border: 0;
-    left: 0;
-    margin: 0;
-    top: 0;
-    width: 215px;
-    height: 140px;
-    position: static;
-}
-
-.plugin-list-item-description {
-    opacity: 1;
-    position: absolute;
-    align-items: center;
-    box-sizing: border-box;
-    display: flex;
-    height: 140px;
-    justify-content: center;
-    left: 0;
-    padding: 10px;
-    text-align: center;
-    top: 0;
-    width: 215px;
-
-
-    letter-spacing: .01428571em;
-    font-family: Roboto, Arial, sans-serif;
-    font-size: .875rem;
-    font-weight: 400;
-    line-height: 2.25rem;
-    background-color: rgba(255, 255, 255, 0.95);
-    color: #3c4043;
-    z-index: 3;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    cursor: pointer;
 }
