修改chrome_plugin爬取 添加百度bos上传 添加MySQL导入csv

--- a/app/templates/chrome_plugin/plugin_list.html
+++ b/app/templates/chrome_plugin/plugin_list.html
@@ -11,7 +11,8 @@
             <a href="{{ url_for('chrome_plugin.plugin_detail',id=plugin.id) }}">
                 <div class="plugin-list-item">
                     <img aria-hidden="true"
-                         src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1591820328299&di=89f08c993d55e875eab6cd37b732856f&imgtype=0&src=http%3A%2F%2Fpic.qqtn.com%2Fup%2F2017-8%2F201708241025487061949.png"
+                            {#                         src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1591820328299&di=89f08c993d55e875eab6cd37b732856f&imgtype=0&src=http%3A%2F%2Fpic.qqtn.com%2Fup%2F2017-8%2F201708241025487061949.png"#}
+                         src="{{ plugin.cover_image }}"
                          class="plugin-list-item-cover-img">
                     <div class="plugin-list-item-description">
                         {{ plugin.short_desc }}
