--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,158 +9,80 @@
             {{ BlogInfo.query.first().title }}
         {% endblock %}
     </title>
-    <link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet">
+    {#<link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet">#}
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
     <link href="{{ url_for('static', filename='css/common.css') }}" rel="stylesheet">
     {% block stylesheet %}
     {% endblock %}
 </head>
 <body>
 <header>
-    <div class='header-top'>
-        <div class="container">
-            <h2 class="blog-title"><a href="{{ url_for('main.index') }}">{{ BlogInfo.query.first().title }}</a></h2>
-            <p class="lead signature hitokoto">
-                {{ BlogInfo.query.first().signature }}
-            </p>
-            <script src="{{ url_for('static', filename='js/jquery-2.2.1.min.js') }}"></script>
-            {#            <script type="text/javascript" src="https://v1.hitokoto.cn/?encode=js"></script>#}
-            <script type="text/javascript">
-                $.ajax({
-                    url: 'https://v1.hitokoto.cn/?encode=json&c=i&c=h&c=d',
-                    success: (res) => {
-                        let from, author, suffix
-                        author = res['from_who']
-                        if (!author || author === 'null') {
-                            author = ''
-                        }
-                        from = `「${res['from']}」`
-                        if (!from || from === 'null') {
-                            from = ''
-                        }
-                        suffix = author + from
-                        if (from || author) {
-                            suffix = "—— " + suffix
-                        }
-                        let content = `『 ${res['hitokoto']}  』${suffix}`
-                        $(".hitokoto").text(content)
-                    }
-                })
-            </script>
-        </div>
-    </div>
-    <nav class="navbar navbar-{{ BlogInfo.query.first().navbar }}" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">切换导航</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+
+    <div class="navigator">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+
+                <a class="navbar-brand" href="#">Flask</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li class=""><a href="/"><span class="glyphicon glyphicon-home"> 首页</span></a></li>
-                    <li class=""><a href="/chrome-plugin/list"><span class="glyphicon">Chrome插件</span></a></li>
-                    <li class=""><a href="/"><span class="glyphicon">工具</span></a></li>
-                    {% for menu in Menu.query.order_by(Menu.order.asc()).all() %}
-                        {% if menu.types.count() %}
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ menu.name }} <b
-                                        class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    {% for article_type in menu.types.all() %}
-                                        {% if not article_type.is_hide %}
-                                            <li>
-                                                <a href="{{ url_for('main.articleTypes', id=article_type.id) }}">
-                                                    {{ article_type.name }}
-                                                </a>
-                                            </li>
-                                            <li class="divider"></li>
-                                        {% endif %}
-                                    {% endfor %}
-                                </ul>
-                            </li>
-                        {% else %}
-                            <li>{{ menu.name }}</li>
-                        {% endif %}
-                    {% endfor %}
-                    {% for article_type in ArticleType.query.all() %}
-                        {% if not article_type.menu %}
-                            {% if not article_type.is_hide %}
-                                <li>
-                                    <a href="{{ url_for('main.articleTypes', id=article_type.id) }}">
-                                        {{ article_type.name }}
-                                    </a>
-                                </li>
-                            {% endif %}
-                        {% endif %}
-                    {% endfor %}
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    {% if current_user.is_authenticated %}
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <img src="{{ current_user.gravatar(size=18) }}">
-                                {{ current_user.username }} <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="{{ url_for('admin.submitArticles') }}">发表博文</a></li>
-                                <li><a href="{{ url_for('admin.account') }}">管理博客</a></li>
-                                <li><a href="{{ url_for('auth.logout') }}">退出登陆</a></li>
-                            </ul>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item ">
+                            <a class="nav-link" href="{{ url_for('main.index') }}">Home <span class="sr-only">(current)</span></a>
                         </li>
-                    {% endif %}
-                </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('chrome_plugin.plugin_list') }}">Chrome插件</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Dropdown
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ml-md-auto">
+                        <li class="nav-item dropdown navbar-right">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Dropdown
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
             </div>
-        </div>
-    </nav>
+        </nav>
+    </div>
 </header>
 {% block Content %}
     <div class="content">
         <div class="container">
-            <div class="row">
-                <div class="col-md-8 article">
-                    {% for category, message in get_flashed_messages(with_categories=true) %}
-                        <div class="alert alert-{{ category }} alert-dismissable">
-                            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                            {{ message }}
-                        </div>
-                    {% endfor %}
-                    {% block content %}
-                    {% endblock %}
+            {% for category, message in get_flashed_messages(with_categories=true) %}
+                <div class="alert alert-{{ category }} alert-dismissable">
+                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                    {{ message }}
                 </div>
-                <div class="col-md-4 blog_nav">
-                    {% block blog_nav_plugin %}
-                        {% for plugin in Plugin.query.order_by(Plugin.order.asc()).all() %}
-                            {% if plugin.disabled != True %}
-                                {% if plugin.content != 'system_plugin' %}
-                                    <div id="{{ plugin.title }}" class="entry-box">
-                                        <h5><strong>{{ plugin.title }}</strong></h5>
-                                        {{ plugin.content | safe }}
-                                    </div>
-                                {% else %}
-                                    <div class="entry-box">
-                                        <h5><strong>博客统计</strong></h5>
-                                        <p>访问量：<span class="badge">{{ BlogView.query.first().num_of_view }}</span></p>
-                                        <p>
-                                            博文总数：<span class="badge">{{ Article.query.count() }}</span>
-                                            评论总数：<span class="badge">{{ Comment.query.count() }}</span>
-                                        </p>
-                                        <p>
-                                            {% for source in Source.query.all() %}
-                                                <a href="{{ url_for('main.article_sources', id=source.id) }}">{{ source.name }}</a>
-                                                ：
-                                                <span class="badge">{{ source.articles.count() }}</span>
-                                            {% endfor %}
-                                        </p>
-                                    </div>
-                                {% endif %}
-                            {% endif %}
-                        {% endfor %}
-                    {% endblock %}
-                </div>
-            </div>
+            {% endfor %}
+            {% block content %}
+            {% endblock %}
         </div>
     </div>
 {% endblock %}
