--- a/app/static/css/common.css
+++ b/app/static/css/common.css
@@ -1,7 +1,7 @@
 /*CSS For common appearance*/
 body {
-    /*background: #F0F0F0;*/
-    background: url('../images/background.jpg');
+    background: white;
+    /*background: url('../images/background.jpg');*/
 }
 
 .blog-title a:link {
@@ -16,7 +16,12 @@ body {
 }
 
 .content {
+    margin-top: 20px;
     min-height: 800px;
+}
+
+.article-details {
+    margin: auto;
 }
 
 #article-details img {
@@ -28,8 +33,9 @@ body {
 }
 
 .entry-box {
-    background: #fff;
     padding: 15px;
+    background-color: #F0F0F0;
+    margin: auto;
     margin-bottom: 20px;
     border: 1px solid #e6e6e6;
     border-radius: 4px;
@@ -39,6 +45,7 @@ body {
     box-shadow: 2px 2px 8px rgba(0, 0, 0, .2);
     border-color: #d6d6d6;
 }
+
 
 .article-entry-header {
     margin: 0;
@@ -55,6 +62,7 @@ body {
 
 .article-entry-title a {
     text-decoration: none;
+    /*color: #337ab7;*/
 }
 
 .article-entry-info {
@@ -84,7 +92,12 @@ div.pagination {
     width: 100%;
     text-align: center;
     padding: 0px;
-    margin: 0px;
+    margin: 10px 0px 0px 0px;
+}
+
+
+div.pagination-container {
+    margin: auto;
 }
 
 .footer-content a {
@@ -213,6 +226,17 @@ ul.comments .disabled-comment-admin-btn {
 /*}*/
 
 /*CSS For edit article*/
+.article {
+    width: 100%;
+    background: #f9f9f9;
+    border: 1px solid #e6e6e6;
+    border-radius: 4px;
+}
+
+.article:hover {
+
+}
+
 .article-edit {
     text-align: right;
 }
