--- a/app/templates/_macros.html
+++ b/app/templates/_macros.html
@@ -1,31 +1,21 @@
 {% macro pagination_widget(pagination, endpoint, fragment='') %}
-    <ul class="pagination">
-        <li{% if not pagination.has_prev %} class="disabled"{% endif %}>
-            <a href="{% if pagination.has_prev %}{{ url_for(endpoint,
-                page = pagination.page - 1, **kwargs) }}{{ fragment }}{% else %}#{% endif %}">
-                &laquo;
-            </a>
-        </li>
-        {% for p in pagination.iter_pages() %}
-            {% if p %}
-                {% if p == pagination.page %}
-                <li class="active">
-                    <a href="{{ url_for(endpoint, page = p, **kwargs) }}{{ fragment }}">{{ p }}</a>
-                </li>
+    <div class="pagination-container">
+        <ul class="pagination">
+            {% for p in pagination.iter_pages() %}
+                {% if p %}
+                    {% if p == pagination.page %}
+                        <li class="page-item active">
+                            <a class="page-link" href="{{ url_for(endpoint, page = p, **kwargs) }}{{ fragment }}">{{ p }}</a>
+                        </li>
+                    {% else %}
+                        <li class="page-item">
+                            <a class="page-link" href="{{ url_for(endpoint, page = p, **kwargs) }}{{ fragment }}">{{ p }}</a>
+                        </li>
+                    {% endif %}
                 {% else %}
-                <li>
-                    <a href="{{ url_for(endpoint, page = p, **kwargs) }}{{ fragment }}">{{ p }}</a>
-                </li>
+                    <li class="page-item disabled"><a class="page-link" href="#">&hellip;</a></li>
                 {% endif %}
-            {% else %}
-            <li class="disabled"><a href="#">&hellip;</a></li>
-            {% endif %}
-        {% endfor %}
-        <li{% if not pagination.has_next %} class="disabled"{% endif %}>
-            <a href="{% if pagination.has_next %}{{ url_for(endpoint,
-                page = pagination.page + 1, **kwargs) }}{{ fragment }}{% else %}#{% endif %}">
-                &raquo;
-            </a>
-        </li>
-    </ul>
+            {% endfor %}
+        </ul>
+    </div>
 {% endmacro %}
