--- a/app/templates/article_detials.html
+++ b/app/templates/article_detials.html
@@ -6,41 +6,47 @@
 {% endblock %}
 
 {% block content %}
-<div id='article-details' class="entry-box" >
-    {% include '_article_info.html' %}
-    <hr>
-    <div>
-        <p>
-            {{ article.content | safe }}
-        </p>
-    </div>
-    <div class="article-add-info">
-        <p style="color: #d8c224;">
+    <div class="row">
+        <div class="article">
+            <div id='article-details' class="col-sm-8 article-details">
+                {% include '_article_info.html' %}
+                <hr>
+                <div>
+                    <p>
+                        {{ article.content | safe }}
+                    </p>
+                </div>
+                <div class="article-add-info">
+                    <p style="color: #d8c224;">
             <span class="glyphicon glyphicon-time">
                 博文最后更新时间：
             </span>
-            {{ moment(article.update_time.replace(microsecond=0)).format('LLL') }}
-        </p>
+                        {{ moment(article.update_time.replace(microsecond=0)).format('LLL') }}
+                    </p>
+                </div>
+                {% if current_user.is_authenticated %}
+                    <div class="article-edit">
+                        <a href="{{ url_for('admin.editArticles', id=article.id) }}">
+                            <button type="button" class="btn btn-default btn-sm">
+                                <span class="glyphicon glyphicon-pencil"></span>
+                                编辑
+                            </button>
+                        </a>
+                    </div>
+                {% endif %}
+                <hr>
+                <h4 id="comments"><span class="glyphicon">评论</span></h4>
+                {% include "_article_comments.html" %}
+                <div class="pagination">
+                    {{ macros.pagination_widget(pagination, endpoint, id=id, fragment='#comments') }}
+                </div>
+                <h4 id="submit-comment"><span class="glyphicon">发表评论</span></h4>
+                {% include "_submit_comment.html" %}
+            </div>
+
+        </div>
     </div>
-    {% if current_user.is_authenticated %}
-    <div class="article-edit">
-        <a href="{{ url_for('admin.editArticles', id=article.id) }}">
-            <button type="button" class="btn btn-default btn-sm">
-                <span class="glyphicon glyphicon-pencil"></span>
-                编辑
-            </button>
-        </a>
-    </div>
-    {% endif %}
-    <hr>
-    <h4 id="comments"><span class="glyphicon">评论</span></h4>
-    {% include "_article_comments.html" %}
-    <div class="pagination">
-        {{ macros.pagination_widget(pagination, endpoint, id=id, fragment='#comments') }}
-    </div>
-    <h4  id="submit-comment"><span class="glyphicon">发表评论</span></h4>
-    {% include "_submit_comment.html" %}
-</div>
+
 {% endblock %}
 
 {% block stylesheet %}
