--- a/app/templates/chrome_plugin/plugin_detail.html
+++ b/app/templates/chrome_plugin/plugin_detail.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
-
+{% block stylesheet %}
+    <link href="{{ url_for('static', filename='css/chrome_plugin.css') }}" rel="stylesheet"/>
+{% endblock %}
 {% block content %}
-    <div style="white-space: pre-line;font-size: 16px;line-height: 24px;">
-        <div style="">{{ plugin.name }}</div>
-        <div style="font-weight: bolder;">{{ plugin.short_desc }}</div>
-        <div style="font-weight: 300;">{{ plugin.description }}</div>
-
+    <div class="plugin-detail-container">
+        <div style="white-space: pre-line;font-size: 16px;line-height: 24px;">
+            <div style="">{{ plugin.name }}</div>
+            <div style="font-weight: bolder;">{{ plugin.short_desc }}</div>
+            <div style="font-weight: 300;">{{ plugin.description }}</div>
+        </div>
     </div>
 {% endblock %}
