--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,7 +38,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('chrome_plugin.plugin_list') }}">Chrome插件</a>
                         </li>
-                        <li class="nav-item dropdown">
+                        {#<li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Dropdown
                             </a>
@@ -51,21 +51,37 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                        </li>
+                        </li>#}
                     </ul>
-                    <ul class="navbar-nav ml-md-auto">
-                        <li class="nav-item dropdown navbar-right">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Dropdown
+                    {% if current_user.is_authenticated %}
+                        <ul class="navbar-nav ml-md-auto">
+                            <li class="nav-item dropdown navbar-right">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <img src="{{ current_user.gravatar(size=18) }}">
+                                    {{ current_user.username }} <b class="caret"></b>
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="{{ url_for('admin.submitArticles') }}">发表博文</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="{{ url_for('admin.account') }}">管理博客</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="{{ url_for('auth.logout') }}">退出登陆</a>
+                                </div>
+                            </li>
+                        </ul>
+                        {#<li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <img src="{{ current_user.gravatar(size=18) }}">
+                                {{ current_user.username }} <b class="caret"></b>
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                        </li>
-                    </ul>
+                            <ul class="dropdown-menu">
+                                <li><a href="{{ url_for('admin.submitArticles') }}">发表博文</a></li>
+                                <li><a href="{{ url_for('admin.account') }}">管理博客</a></li>
+                                <li><a href="{{ url_for('auth.logout') }}">退出登陆</a></li>
+                            </ul>
+                        </li>#}
+                    {% endif %}
+
                 </div>
 
             </div>
