--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -9,7 +9,7 @@
 </head>
 <body background="{{ url_for('static', filename='images/background.jpg') }}">
 <div class="container login-page">
-    <div class="row">
+    {#<div class="row">
         <div class="col-md-4 col-lg-offset-4">
             {% for category, message in get_flashed_messages(with_categories=true) %}
                 <div class="alert alert-{{ category }} alert-dismissable">
@@ -45,10 +45,34 @@
                 </div>
             </form>
         </div>
-    </div>
+    </div>#}
+    <form class="form-sign-up" role="form" method="post" action="{{ url_for('auth.login') }}">
+        {{ form.csrf_token }}
+        <div class="text-center mb-4">
+            <h1 class="h3 mb-3 font-weight-normal">登录</h1>
+        </div>
+
+        <div class="form-label-group">
+            {{ form.email(type="email" , id="inputEmail",class='form-control',placeholder="Email address", required="", autofocus="") }}
+            {#            {{ form.email.label(for='inputEmail') }}#}
+        </div>
+
+        <div class="form-label-group">
+            {{ form.password(type="password" ,id="inputPassword",class='form-control',placeholder="Password", required="", autofocus="") }}
+            {#            {{ form.password.label(for='inputPassword') }}#}
+        </div>
+
+        <div class="checkbox mb-3">
+            <label>
+                <input type="checkbox" value="remember-me"> Remember me
+            </label>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    </form>
 </div>
 
-<script src="{{ url_for('static', filename='js/jquery-2.2.1.min.js') }}"></script>
-<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </body>
 </html>
