--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -9,6 +9,12 @@
 </head>
 <body background="{{ url_for('static', filename='images/background.jpg') }}">
 <div class="container login-page">
+    {#{% for category, message in get_flashed_messages(with_categories=true) %}
+        <div class="alert alert-{{ category }} alert-dismissable">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+            {{ message }}
+        </div>
+    {% endfor %}#}
     {#<div class="row">
         <div class="col-md-4 col-lg-offset-4">
             {% for category, message in get_flashed_messages(with_categories=true) %}
@@ -46,6 +52,7 @@
             </form>
         </div>
     </div>#}
+
     <form class="form-sign-up" role="form" method="post" action="{{ url_for('auth.login') }}">
         {{ form.csrf_token }}
         <div class="text-center mb-4">
@@ -65,6 +72,11 @@
         <div class="checkbox mb-3">
             <label>
                 <input type="checkbox" value="remember-me"> Remember me
+            </label>
+            <label class="login-err-msg-tip">
+                {% for catg,msg in get_flashed_messages(with_categories=true) %}
+                    {{ msg }}
+                {% endfor %}
             </label>
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
