activate chrome plugin page carousel cycle

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -125,7 +125,7 @@
         <span class="glyphicon glyphicon-arrow-down"></span>
     </button>
 </div>
-<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+{#<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>#}
 <script src="{{ url_for('static', filename='js/floatButton.js') }}"></script>
 {# csrfToken for Ajax   #}
 <script>
