--- a/app/templates/chrome_plugin/plugin_detail.html
+++ b/app/templates/chrome_plugin/plugin_detail.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="container">
         <div class="jumbotron jumbotron-fluid plugin-detail-container">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <div id="carouselExampleIndicators" class="carousel slide " data-interval="2500" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
