--- a/app/templates/_article_comments.html
+++ b/app/templates/_article_comments.html
@@ -66,7 +66,7 @@
                 </div>
                 {% endif %}
                 {% if comment.disabled == False or current_user.is_authenticated %}
-                <div class="col-sm-1 {% if current_user.is_anonymous %}col-sm-offset-10{% endif %}">
+                <div class="col-md-2  col-sm-offset-10 {% if current_user.is_anonymous %}col-sm-offset-10{% endif %}">
                     <button class="btn btn-sm btn-info" onclick="go_to_reply({{ comment.id }}, '{{ comment.author_name }}')">
                         <span class="glyphicon glyphicon-comment"></span> 回复
                     </button>
