1.add vue and element ui 2.optimize the chrome plugin upload and import to mysql

--- a/app/static/css/chrome_plugin.css
+++ b/app/static/css/chrome_plugin.css
@@ -12,6 +12,7 @@
     height: auto;
     display: inline-block;
     margin-left: 25px;
+    align-self: flex-start;
     margin-top: 25px;
     width: 215px;
     color: #3c4043;
