--- a/app/templates/base/admin.html
+++ b/app/templates/base/admin.html
@@ -1,187 +1,178 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <!-- import CSS -->
-    <link rel="stylesheet" href="{{ url_for('static',filename='element/index@2.13.2.css') }}">
-    <!-- import Vue before Element -->
-    <script type="text/javascript" src="{{ url_for("static",filename='vue/vue.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for("static",filename='axios/axios.js') }}"></script>
-    <script src="{{ url_for("static",filename='element/index@2.13.2.js') }}"></script>
-</head>
-<body>
-<div id="app">
-    <template>
-        <el-container style="height: 100%;">
-            <el-header>
-                <el-menu
-                        :default-active="activeIndex2"
-                        class="el-menu-demo"
-                        mode="horizontal"
-                        @select="handleSelect"
-                        background-color="#545c64"
-                        text-color="#fff"
-                        active-text-color="#ffd04b">
-                    <el-menu-item index="1">Flask</el-menu-item>
-                    <el-menu-item index="2">处理中心</el-menu-item>
-                    <el-menu-item index="3">处理中心</el-menu-item>
-                    <el-menu-item index="4">处理中心</el-menu-item>
-                </el-menu>
-            </el-header>
-            <el-container>
-                <el-scrollbar style="height: 100%;border-right: 2.5px solid #f0f0f0;">
-                    <el-aside width="200px">
-                        <el-menu
-                                :default-active="activeIndex2"
-                                ref="leftMenu"
-                                class="el-menu-vertical-demo"
-                                :unique-opened="true"
-                                :collapse-transition="true"
-                                @open="handleOpen"
-                                @close="handleClose"
-                                text-color="black"
-                                active-text-color="#ffd04b">
-                            <el-submenu index="1">
+{% extends 'base/foundation.html' %}
+
+{% block body %}
+    <div id="app">
+        <template>
+            <el-container style="height: 100%;">
+                <el-header>
+                    <el-menu
+                            :default-active="menuIndex"
+                            class="el-menu-demo"
+                            mode="horizontal"
+                            @select="handleSelect"
+                            background-color="#545c64"
+                            text-color="#fff"
+                            active-text-color="#ffd04b">
+                        <el-menu-item index="1">Flask</el-menu-item>
+                        <div class="profile-container">
+                            <el-submenu index="2">
                                 <template slot="title">
-                                    <i class="el-icon-location"></i>
-                                    <span>博客</span>
-                                </template>
-                                <el-menu-item-group>
-                                    <a href="#">
-                                        <el-menu-item index="1-1">发表博文</el-menu-item>
-                                    </a>
-                                    <a href="{{ url_for('admin.manager') }}">
-                                        <el-menu-item index="1-2">管理博文</el-menu-item>
-                                    </a>
-                                    <el-menu-item index="1-3">博文分类</el-menu-item>
-                                    <el-menu-item index="1-4">博文抓取</el-menu-item>
-                                </el-menu-item-group>
-                                {#<el-menu-item-group>
+                                    <img src="{{ current_user.gravatar(size=18) }}">
+                                    {{ current_user.username }}</template>
+                                <a class="dropdown-item" href="#">
+                                    <el-menu-item index="2-2">发表博文</el-menu-item>
+                                </a>
+                                <a class="dropdown-item" href="{{ url_for('admin.manage_articles') }}">
+                                    <el-menu-item index="2-2">管理博文</el-menu-item>
+                                </a>
+                                <a class="dropdown-item" href="{{ url_for('admin.submitArticles') }}">
+                                    <el-menu-item index="2-2">退出登录</el-menu-item>
+                                </a>
+                            </el-submenu>
+                        </div>
+                    </el-menu>
+                </el-header>
+                <el-container>
+                    <el-scrollbar style="height: 100%;border-right: 2.5px solid #f0f0f0;">
+                        <el-aside width="200px">
+                            <el-menu
+                                    :default-active="activeIndex2"
+                                    ref="leftMenu"
+                                    class="el-menu-vertical-demo"
+                                    :unique-opened="true"
+                                    :collapse-transition="true"
+                                    @select="handleLeftSelect"
+                                    text-color="black"
+                                    active-text-color="#ffd04b">
+                                <el-submenu index="1">
+                                    <template slot="title">
+                                        <i class="el-icon-location"></i>
+                                        <span>博客</span>
+                                    </template>
+                                    <el-menu-item-group>
+                                        <a href="#">
+                                            <el-menu-item index="1-1">发表博文</el-menu-item>
+                                        </a>
+                                        <a href="{{ url_for('admin.manager') }}">
+                                            <el-menu-item index="1-2">管理博文</el-menu-item>
+                                        </a>
+                                        <el-menu-item index="1-3">博文分类</el-menu-item>
+                                        <el-menu-item index="1-4">博文抓取</el-menu-item>
+                                    </el-menu-item-group>
+                                    {#<el-menu-item-group>
                                 <el-menu-item index="1-4">博文抓取</el-menu-item>
                             </el-menu-item-group>#}
-                                {#<el-submenu index="1-5">
+                                    {#<el-submenu index="1-5">
                                 <template slot="title">选项4</template>
                                 <el-menu-item index="1-5-1">选项1</el-menu-item>
                             </el-submenu>#}
-                            </el-submenu>
-                            <el-submenu index="2">
-                                <template slot="title">
-                                    <i class="el-icon-menu"></i>
-                                    <span>评论</span>
-                                </template>
-                                <el-menu-item-group>
-                                    <el-menu-item index="2-1">博文评论</el-menu-item>
-                                </el-menu-item-group>
-                            </el-submenu>
-                            <el-submenu index="3">
-                                <template slot="title">
-                                    <i class="el-icon-menu"></i>
-                                    <span>Chrome插件</span>
-                                </template>
-                                <el-menu-item-group>
-                                    <a href="{{ url_for('admin.manage_plugins') }}">
-                                        <el-menu-item index="3-1">插件管理</el-menu-item>
-                                    </a>
-                                </el-menu-item-group>
-                                <el-menu-item-group>
-                                    <a href="{{ url_for('admin.manage_plugins') }}">
-                                        <el-menu-item index="3-2">插件爬取</el-menu-item>
-                                    </a>
-                                </el-menu-item-group>
-                            </el-submenu>
-                            <el-submenu index="4">
-                                <template slot="title">
-                                    <i class="el-icon-setting"></i>
-                                    <span>其它管理</span>
-                                </template>
-                                <el-menu-item-group>
-                                    <el-menu-item index="4-1">用户管理</el-menu-item>
-                                </el-menu-item-group>
-                            </el-submenu>
+                                </el-submenu>
+                                <el-submenu index="2">
+                                    <template slot="title">
+                                        <i class="el-icon-menu"></i>
+                                        <span>评论</span>
+                                    </template>
+                                    <el-menu-item-group>
+                                        <el-menu-item index="2-1">博文评论</el-menu-item>
+                                    </el-menu-item-group>
+                                </el-submenu>
+                                <el-submenu index="3">
+                                    <template slot="title">
+                                        <i class="el-icon-menu"></i>
+                                        <span>Chrome插件</span>
+                                    </template>
+                                    <el-menu-item-group>
+                                        <a href="{{ url_for('admin.manage_plugins') }}">
+                                            <el-menu-item index="3-1">插件管理</el-menu-item>
+                                        </a>
+                                    </el-menu-item-group>
+                                    <el-menu-item-group>
+                                        <a href="{{ url_for('admin.manage_plugins') }}">
+                                            <el-menu-item index="3-2">插件爬取</el-menu-item>
+                                        </a>
+                                    </el-menu-item-group>
+                                </el-submenu>
+                                <el-submenu index="4">
+                                    <template slot="title">
+                                        <i class="el-icon-setting"></i>
+                                        <span>其它管理</span>
+                                    </template>
+                                    <el-menu-item-group>
+                                        <el-menu-item index="4-1">用户管理</el-menu-item>
+                                    </el-menu-item-group>
+                                </el-submenu>
 
-                        </el-menu>
-                    </el-aside>
-                </el-scrollbar>
-                <el-main>
-                    <main-content></main-content>
-                </el-main>
+                            </el-menu>
+                        </el-aside>
+                    </el-scrollbar>
+                    <el-main>
+                        <main-content></main-content>
+                    </el-main>
+                </el-container>
             </el-container>
-        </el-container>
-    </template>
-</div>
-{% include component ignore missing %}
-<script>
-    axios.defaults.headers.post['Content-Type'] = 'application/x-www-form-urlencoded'
-    axios.defaults.headers.get['Content-Type'] = 'application/json'
-    const axiosInstance = axios.create({
-        paramsSerializer: function (params) {
-            let tmp = Object.keys(params).map(function (key) {
-                return encodeURIComponent(key) + "=" + encodeURIComponent(params[key]);
-            }).join("&")
-            return tmp
+        </template>
+    </div>
+    {% include component ignore missing %}
+    <script>
+
+        new Vue({
+            el: "#app",
+            data() {
+                return {
+                    menuIndex: '1',
+                    activeIndex2: '1'
+                }
+            },
+            watch: {
+                activeIndex2(val, oldVal) {
+                    window.localStorage.setItem("activeIndex2", val)
+                }
+            },
+            mounted() {
+                this.activeIndex2 = window.localStorage.getItem("activeIndex2")
+            },
+            methods: {
+                handleSelect(key, keyPath) {
+                    window.localStorage.setItem("menuIndex", key)
+                },
+                handleLeftSelect(key, keyPath) {
+                    window.localStorage.setItem("activeIndex2", key)
+                }
+            },
+            destroy(){
+                console.log("--------")
+            }
+        })
+    </script>
+    <style>
+        body {
+            margin: 0px;
+            font-size: 16px;
         }
-    })
-    Vue.prototype.$http = axiosInstance
-    axiosInstance.interceptors.request.use(function (config) {
-        config.headers.common['X-CSRFToken'] = "{{ csrf_token() }}"
-        return config
-    })
 
-    new Vue({
-        el: "#app",
-        data() {
-            return {
-                activeIndex2: "1",
-                activeIndex1: "1"
-            }
-        },
-        watch: {
-            activeIndex1(val, oldVal) {
-                window.localStorage.setItem("activeIndex1", val)
-            },
-            activeIndex2(val, oldVal) {
-                window.localStorage.setItem("activeIndex2", val)
-            }
-        },
-        mounted() {
-            this.activeIndex2 = window.localStorage.getItem("activeIndex2")
-            this.$refs.leftMenu.open(this.activeIndex2)
-        },
-        methods: {
-            handleOpen(key, keyPath) {
-                window.localStorage.setItem("activeIndex2", key)
-            },
-            handleClose(key, keyPath) {
-                window.localStorage.removeItem("activeIndex1")
-            },
-            handleSelect(key, keyPath) {
-                console.log(key, keyPath);
-            }
+        a {
+            text-decoration: none;
         }
-    })
-</script>
-<style>
-    body {
-        margin: 0px;
-        font-size: 16px;
-    }
 
-    a {
-        text-decoration: none;
-    }
+        #app {
+            height: calc(100vh);
+        }
 
-    #app {
-        height: calc(100vh);
-    }
+        #app .el-header {
+            padding: 0px;
+        }
 
-    #app .el-header {
-        padding: 0px;
-    }
+        #app .el-scrollbar__wrap {
+            overflow-x: hidden;
+        }
 
-    #app .el-scrollbar__wrap {
-        overflow-x: hidden;
-    }
-</style>
-</body>
-</html>
+        .profile-container {
+            float: right;
+            margin-right: 100px;
+        }
+
+        .profile-container .el-icon-arrow-down:before {
+            content: '';
+        }
+    </style>
+{% endblock %}
