--- a/app/templates/base/index.html
+++ b/app/templates/base/index.html
@@ -1,16 +1,82 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <!-- import CSS -->
-    <link rel="stylesheet" href="{{ url_for('static',filename='element/index@2.13.2.css') }}">
-    <!-- import Vue before Element -->
-    <script type="text/javascript" src="{{ url_for("static",filename='vue/vue.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for("static",filename='axios/axios.js') }}"></script>
-    <script src="{{ url_for("static",filename='element/index@2.13.2.js') }}"></script>
-</head>
-<body>
+{% extends 'base/foundation.html' %}
 
-</body>
-</html>
+{% block body %}
+    <div id="app">
+        <template>
+            <el-container style="height: 100%;">
+                <el-header>
+                    <el-menu
+                            :default-active="menuIndex"
+                            class="el-menu-demo"
+                            mode="horizontal"
+                            @select="handleSelect"
+                            background-color="#545c64"
+                            text-color="#fff"
+                            active-text-color="#ffd04b">
+                        <el-menu-item index="1">Flask</el-menu-item>
+                        <el-menu-item index="2">博客</el-menu-item>
+
+                        <el-menu-item index="3">
+                            <a style="height: 100%;" href="/chrome-plugin/list">
+                                <span>Chrome插件</span>
+                            </a>
+                        </el-menu-item>
+
+                    </el-menu>
+                </el-header>
+                <el-container>
+                    <el-main>
+                        <main-content></main-content>
+                    </el-main>
+                </el-container>
+            </el-container>
+        </template>
+    </div>
+    {% include component ignore missing %}
+    <script>
+
+        new Vue({
+            el: "#app",
+            data() {
+                return {
+                    menuIndex: '3'
+                }
+            },
+            mounted() {
+                this.menuIndex = window.localStorage.getItem("menuIndex")
+            },
+            methods: {
+                handleSelect(key, keyPath) {
+                    window.localStorage.setItem("menuIndex", key)
+                }
+            }
+        })
+    </script>
+    <style>
+        body {
+            margin: 0px;
+            font-size: 16px;
+        }
+
+        a {
+            text-decoration: none;
+            display: inline-block;
+        }
+
+        #app {
+            height: calc(100vh);
+        }
+
+        #app .el-header {
+            padding: 0px;
+        }
+
+        #app .el-main {
+            padding: 3px 0;
+        }
+
+        #app .el-scrollbar__wrap {
+            overflow-x: hidden;
+        }
+    </style>
+{% endblock %}
