adjust the page

--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -49,7 +49,7 @@
                                     <span>博客</span>
                                 </template>
                                 <el-menu-item-group>
-                                    <a href="{{ url_for('admin.manager') }}">
+                                    <a href="{{ url_for('admin.home') }}">
                                         <el-menu-item index="1-1">发表博文</el-menu-item>
                                     </a>
                                     <el-menu-item index="1-2">管理博文</el-menu-item>
