--- a/app/templates/base/admin.html
+++ b/app/templates/base/admin.html
@@ -13,13 +13,17 @@
                             background-color="#545c64"
                             text-color="#fff"
                             active-text-color="#ffd04b">
-                        <el-menu-item index="1">Flask</el-menu-item>
+
+                        <el-menu-item index="1">
+                            <a href="{{ url_for('admin.home') }}">
+                                Flask
+                            </a></el-menu-item>
                         <div class="profile-container">
                             <el-submenu index="2">
                                 <template slot="title">
                                     <img src="{{ current_user.gravatar(size=18) }}">
                                     {{ current_user.username }}</template>
-                                <a class="dropdown-item" href="#">
+                                <a class="dropdown-item" href="{{ url_for('article.create_article') }}">
                                     <el-menu-item index="2-2">发表博文</el-menu-item>
                                 </a>
                                 <a class="dropdown-item" href="{{ url_for('admin.manage_articles') }}">
@@ -51,22 +55,15 @@
                                         <span>博客</span>
                                     </template>
                                     <el-menu-item-group>
-                                        <a href="{{ url_for('admin.edit_article') }}">
+                                        <a href="{{ url_for('article.create_article') }}">
                                             <el-menu-item index="1-1">发表博文</el-menu-item>
                                         </a>
-                                        <a href="{{ url_for('admin.manager') }}">
+                                        <a href="{{ url_for('admin.home') }}">
                                             <el-menu-item index="1-2">管理博文</el-menu-item>
                                         </a>
                                         <el-menu-item index="1-3">博文分类</el-menu-item>
                                         <el-menu-item index="1-4">博文抓取</el-menu-item>
                                     </el-menu-item-group>
-                                    <el-menu-item-group>
-                                        <el-menu-item index="1-6">博文抓取</el-menu-item>
-                                    </el-menu-item-group>
-                                    <el-submenu index="1-5">
-                                        <template slot="title">选项4</template>
-                                        <el-menu-item index="1-5-1">选项1</el-menu-item>
-                                    </el-submenu>
                                 </el-submenu>
                                 <el-submenu index="2">
                                     <template slot="title">
@@ -74,7 +71,10 @@
                                         <span>评论</span>
                                     </template>
                                     <el-menu-item-group>
-                                        <el-menu-item index="2-1">博文评论</el-menu-item>
+                                        <a href="{{ url_for('comment.list_view') }}">
+                                            <el-menu-item index="2-1">博文评论</el-menu-item>
+                                        </a>
+
                                     </el-menu-item-group>
                                 </el-submenu>
                                 <el-submenu index="3">
@@ -88,7 +88,7 @@
                                         </a>
                                     </el-menu-item-group>
                                     <el-menu-item-group>
-                                        <a href="{{ url_for('admin.manage_plugins') }}">
+                                        <a href="{{ url_for('chrome_plugin.plugin_spider') }}">
                                             <el-menu-item index="3-2">插件爬取</el-menu-item>
                                         </a>
                                     </el-menu-item-group>
