optimize the sql alchemy model

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -65,7 +65,7 @@
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="{{ url_for('admin.account') }}">管理博客</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="{{ url_for('auth.logout') }}">退出登陆</a>
+                                    <a class="dropdown-item" href="{{ url_for('auth.logout_view') }}">退出登陆</a>
                                 </div>
                             </li>
                         </ul>
