--- a/app/templates/base/index.html
+++ b/app/templates/base/index.html
@@ -15,7 +15,7 @@
                             active-text-color="#ffd04b">
                         <el-menu-item index="1">Flask</el-menu-item>
                         <el-menu-item index="2">
-                            <a style="height: 100%;" href="/new">
+                            <a style="height: 100%;" href="/">
                                 <span>博客</span>
                             </a>
                         </el-menu-item>
@@ -81,7 +81,8 @@
         #app .main-content_container {
             margin: auto;
             position: relative;
-            width: 985px;
+            width: 1200px;
+            text-align: center;
             min-height: 100%;
         }
     </style>
