--- a/app/templates/base/login.html
+++ b/app/templates/base/login.html
@@ -13,7 +13,7 @@
                     </div>
                     <div class="input-group-field">
 
-                        <el-input class="input-group-field-value" v-model="entity.password" placeholder="Password"></el-input>
+                        <el-input type="password" class="input-group-field-value" v-model="entity.password" placeholder="Password"></el-input>
                     </div>
                     <div class="input-group-field">
                         <el-checkbox v-model="entity.remember">Remember Me</el-checkbox>
