1.modify the index.html container width 2.selenium chrome spider

--- a/app/templates/base/foundation.html
+++ b/app/templates/base/foundation.html
@@ -3,15 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <!-- vue -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
+    <!--<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
+    <!-- vue -->
+
+    <!-- element ui -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui@2.13.2/lib/theme-chalk/index.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/element-ui@2.12.0/lib/index.min.js"></script>
+    <!-- element ui -->
+
+    <!-- vuetify -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+    <!-- vuetify -->
+
 
     <link rel="icon" href="{{ url_for('static',filename='favicon.ico') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/base.css') }}">
     <script src="https://cdn.jsdelivr.net/npm/@babel/polyfill@7.10.4/dist/polyfill.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
-{#    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>#}
     <script src="https://cdn.jsdelivr.net/npm/axios@0.19.2/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui@2.13.2/lib/theme-chalk/index.css">
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/element-ui@2.12.0/lib/index.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jsonpickle@1.1.2/build/jsonpickle.min.js"></script>
 
     <script type="text/javascript">
