adjust the height of the app div

--- a/app/templates/base/index.html
+++ b/app/templates/base/index.html
@@ -74,7 +74,7 @@
 
 
         #app {
-            height: calc(100vh);
+            min-height: calc(100vh);
         }
 
         #app .el-header {
