modify the chrome plugin base dir

--- a/app/templates/base/foundation.html
+++ b/app/templates/base/foundation.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Title</title>
     <link rel="icon" href="{{ url_for('static',filename='favicon.ico') }}" type="image/x-icon">
     <script>
@@ -37,6 +38,7 @@
     <!-- element ui -->
 
     <link rel="stylesheet" href="{{ url_for('static',filename='css/base.css') }}">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1784687_wsqy42iakze.css" />
     <script src="https://cdn.jsdelivr.net/npm/@babel/polyfill@7.10.4/dist/polyfill.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@0.19.2/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jsonpickle@1.1.2/build/jsonpickle.min.js"></script>
@@ -79,10 +81,7 @@
 </head>
 <body>
 <style>
-    body {
-        margin: 0px;
-        font-size: 16px;
-    }
+
 
     h1, h2, h3, h4, h5, h6, span, p {
         margin: 0px;
