--- a/app/templates/base/index.html
+++ b/app/templates/base/index.html
@@ -3,9 +3,26 @@
 {% block body %}
     <div id="app">
         <template>
-            <el-container style="height: 100%;">
-                <el-header>
-                    <el-menu
+            <el-container style="flex-wrap: wrap;">
+                <header style="width: 100%;">
+                    <div class="menu-header">
+                        Flask
+                    </div>
+                    <div>
+                        <ul class="menu-container">
+                            <li class="menu-item float-item list-btn" onclick="openMenu(event)">
+                                <svg height="30" style="vertical-align: text-bottom;fill: white;" viewBox="0 0 16 16" version="1.1" width="30" aria-hidden="true">
+                                    <path fill-rule="evenodd" d="M1 2.75A.75.75 0 011.75 2h12.5a.75.75 0 110 1.5H1.75A.75.75 0 011 2.75zm0 5A.75.75 0 011.75 7h12.5a.75.75 0 110 1.5H1.75A.75.75 0 011 7.75zM1.75 12a.75.75 0 100 1.5h12.5a.75.75 0 100-1.5H1.75z"></path>
+                                </svg>
+                            </li>
+                            <li class="menu-item">Chrome插件</li>
+                            <li class="menu-item">Chrome插件</li>
+                            <li class="menu-item">Chrome插件</li>
+
+                        </ul>
+                    </div>
+
+                    {#<el-menu
                             :default-active="menuIndex"
                             class="el-menu-demo"
                             mode="horizontal"
@@ -31,8 +48,9 @@
                             </el-menu-item>
                         </a>
 
-                    </el-menu>
-                </el-header>
+                    </el-menu>#}
+                </header>
+
                 <el-container>
                     <el-main>
 
@@ -69,6 +87,12 @@
                 }
             }
         })
+
+        function openMenu(e) {
+            let menu = document.querySelector(".menu-container");
+            let length = menu.childElementCount - 1
+            menu.style.height = 3 * length + "em"
+        }
     </script>
     <style>
 
@@ -94,6 +118,57 @@
             position: relative;
             text-align: center;
             height: 100%;
+        }
+
+        .menu-container {
+            padding-left: 0px;
+            list-style: none;
+            height: 3rem;
+            position: relative;
+            margin: 0px;
+        }
+
+        .menu-header {
+            line-height: 100%;
+            height: 100%;
+        }
+
+        .menu-item {
+            padding: 0 5px;
+            cursor: pointer;
+            margin: 0;
+            height: 3rem;
+            line-height: 3rem;
+            border: 1px solid red;
+            font-size: 1.2rem;
+            display: inline-block;
+        }
+
+        .list-btn {
+            display: none;
+        }
+
+
+        @media screen and (min-width: 768px) {
+            .menu-container {
+
+            }
+
+            .menu-header {
+                float: left;
+            }
+
+            .menu-item {
+                float: left;
+            }
+
+            .float-item {
+                float: right;
+            }
+
+            .list-btn {
+                display: inline-block;
+            }
         }
     </style>
 {% endblock %}
